# chat-with-pandas

./: .gitignore  README.md  app.py  pyproject.toml
src/chat_with_pandas/: tools.py  types.py  z_example_claude.py  z_example_claude_2.py  z_example_gemini.py
