[project]
name = "chat-with-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.1",
    "ipython>=8.37.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic-ai>=0.3.6",
    "streamlit>=1.46.1",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
